[Backend] Make API simple
